objects/Nielsen_Brand__c.object
<CustomObject>
    <fields>
        <fullName>Brands__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brands</label>
        <referenceTo>Brands__c</referenceTo>
        <relationshipLabel>Nielsen Brands</relationshipLabel>
        <relationshipName>Nielsen_Brands</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Nielsen_Brand_Parent_Company__c</fullName>
        <formula>Nielsen_Parent_Company__r.Nielsen_Parent_Company__c &amp;&quot; - &quot;&amp; Nielsen_Brand__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nielsen Brand Parent Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nielsen_Brand__c</fullName>
        <externalId>true</externalId>
        <label>Nielsen Brand</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Nielsen_Parent_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nielsen Parent Company</label>
        <referenceTo>Nielsen_Parent_Company__c</referenceTo>
        <relationshipLabel>Nielsen Brands</relationshipLabel>
        <relationshipName>Nielsen_Brands</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Nielsen Brand</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>NB-{000000}</displayFormat>
        <label>NB Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Nielsen Brands</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>